# archi-ai

./: .gitignore  LICENSE  README.md
lean/test/: ServiceMetricsTest.lean
python/: pyproject.toml  requirements-dev.txt  requirements.txt
python/experiments/: best_g02-federalspending.txt.json  best_g03-loudoun.txt.json  best_g04-recycling.txt.json  best_g05-openspending.txt.json  best_g08-frictionless.txt.json  best_g10-scrumalliance.txt.json  best_g11-nsf.txt.json  best_g12-camperplus.txt.json  best_g13-planningpoker.txt.json  best_g14-datahub.txt.json  best_g16-mis.txt.json  best_g17-cask.txt.json  best_g18-neurohub.txt.json  best_g19-alfred.txt.json  best_g21-badcamp.txt.json  best_g22-rdadmp.txt.json  best_g23-archivesspace.txt.json  best_g24-unibath.txt.json  best_g25-duraspace.txt.json  best_g26-racdam.txt.json  best_g27-culrepo.txt.json  best_g28-zooniverse.txt.json  program_db.jsonl  results.csv
python/formal/: Formal.lean  ServiceMetrics.lean  ValidateGenotype.lean  lake-manifest.json  lakefile.lean  lakefile.toml
python/formal/Formal/: ServiceMetrics.lean  ValidateGenotype.lean
python/formal/src/: ServiceMetrics.lean  ValidateGenotype.lean
python/lean/: lake-manifest.json  lakefile.lean  tmp1njgijv0.json  tmp5b2bfvm1.json  tmpe03_5oit.json  tmpse72pgqv.json
python/lean/src/: ServiceMetrics.lean  ValidateGenotype.lean
python/src/alpha_pipeline/: __init__.py  metrics.py  runner.py
